Add tables to /all-results

--- a/task_queue/app/templates/add_task.html
+++ b/task_queue/app/templates/add_task.html
@@ -18,6 +18,7 @@
     <div class="row">
       <div class="col">
         <h5 class="mt-3">Word Counter</h5>
+        <a href="/all-results">All Results</a>
         <div class="card mt-3">
           <div class="card-body">
             <form action="/add-task">
