--- a/task_queue/app/templates/all_results.html
+++ b/task_queue/app/templates/all_results.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="static/style.css">
 
   <title>Past Scraping Results</title>
 </head>
@@ -19,6 +21,7 @@
     <div class="row">
       <div class="col">
         <h5 class="mt-3">Word Count</h5>
+        <a href='/add-task'>Back Home</a>
         <div class="card mt-3">
           <div class="card-body">
             <form action="/all-results">
@@ -37,21 +40,70 @@
     </div>
   </div>
 
+  <br>
+
   <div class="container">
+
     <div class="row">
       <div class="col">
         <h5 class="mt-3">Showing All Data</h5>
         <div class="card mt-3">
           <div class="card-body">
-              <h4>Result Page</h4>
-              <hr>
+            <h4>Matched Sources</h4>
+            <hr>
 
-              <ul>
-                  {% for word, count in all_words %}
-                  <li>{{ word }} - {{ count }}</li>
-                  {% endfor %}
-              </ul>
-              
+            <div class="table-wrapper-scroll-y my-custom-scrollbar2">
+              <table class="table table-striped table-dark table-bordered table-hover table-sm">
+                <thead class="thead-dark">
+                  <tr>
+                    <th>Mathced Source URL</th>
+                    <th>Scraped at</th>
+                  </tr>
+                </thead>
+
+                {% for source, scraped_at in sources %}
+                <tbody>
+                  <tr>
+                    <td>{{ source }}</td>
+                    <td>{{ scraped_at }}</td>
+                  </tr>
+                </tbody>
+                {% endfor %}
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col">
+        <div class="card mt-3">
+          <div class="card-body">
+            <h4>Result Page</h4>
+            <hr>
+
+            <div class="table-wrapper-scroll-y my-custom-scrollbar">
+              <table class="table table-bordered table-striped mb-0 table-sm">
+                <thead class="thead-dark">
+                  <tr>
+                    <th>word</th>
+                    <th>count</th>
+                  </tr>
+                </thead>
+                {% for word, count in all_words %}
+                <tbody>
+                  <tr>
+
+                    <td>{{word}}</td>
+                    <td>{{count}}</td>
+                  </tr>
+                </tbody>
+                {% endfor %}
+
+              </table>
+            </div>
           </div>
         </div>
       </div>
