--- a/task_queue/app/templates/add_task.html
+++ b/task_queue/app/templates/add_task.html
@@ -14,11 +14,44 @@
 
 <body>
 
+
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/" style="font-weight: bold;">WC</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/add-task">Scraper</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="/all-results">All Results</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<hr>
+
+
+
+
+
+
+
+
+
+
+
   <div class="container">
     <div class="row">
       <div class="col">
         <h5 class="mt-3">Word Counter</h5>
-        <a href="/all-results">All Results</a>
         <div class="card mt-3">
           <div class="card-body">
             <form action="/add-task">
