--- a/task_queue/app/templates/all_results.html
+++ b/task_queue/app/templates/all_results.html
@@ -11,17 +11,37 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
 
-  <title>Past Scraping Results</title>
+  <title>All Results From Past</title>
 </head>
 
 <body>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/" style="font-weight: bold;">WC</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/add-task">Scraper</a>
+        </li>
+
+        <li class="nav-item active">
+          <a class="nav-link" href="/all-results">All Results</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <hr>
 
 
   <div class="container">
     <div class="row">
       <div class="col">
-        <h5 class="mt-3">Word Count</h5>
-        <a href='/add-task'>Back Home</a>
         <div class="card mt-3">
           <div class="card-body">
             <form action="/all-results">
@@ -46,7 +66,6 @@
 
     <div class="row">
       <div class="col">
-        <h5 class="mt-3">Showing All Data</h5>
         <div class="card mt-3">
           <div class="card-body">
             <h4>Matched Sources</h4>
