--- a/task_queue/app/templates/result.html
+++ b/task_queue/app/templates/result.html
@@ -7,33 +7,72 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel='stylesheet' href="static/style.css">
   <title>Result</title>
 </head>
 
 <body>
 
+
+
+
+
   <div class="container">
     <div class="row">
       <div class="col">
-        <h5 class="mt-3">Word Counter</h5>
+
         <div class="card mt-3">
           <div class="card-body">
-              <h2>Result Page</h2>
-              <hr>
-              
-              <ul>
-                  <li>{{ url }}</li>
-                  <li>{{ time_stamp }}</li>
-              </ul>
+            <h4 class="mt-3">Word Counter Result</h4>
+            <div class="table">
+              <table class="table table-striped table-bordered table-hover table-sm">
+                <thead class="thead-dark">
+                  <tr>
+                    <th>Source URL</th>
+                    <th>Scraped at</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>{{ url }}</td>
+                    <td>{{ time_stamp }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
 
-              <ul>
-                  {% for word, count in top_30_words %}
-                  <li>{{ word }} - {{ count }}</li>
-                  {% endfor %}
-              </ul>
-              
+
+        <div class="card mt-3">
+          <div class="card-body">
+            <h4>Result</h4>
+            <hr>
+
+            <h5>Total Words: {{ len_top_50_words }}</h5>
+            <hr>
+            <div class="table-wrapper-scroll-y my-custom-scrollbar">
+              <table class="table table-bordered table-striped mb-0 table-sm">
+                <thead class="thead-dark">
+                  <tr>
+                    <th>word</th>
+                    <th>count</th>
+                  </tr>
+                </thead>
+                {% for word, count in top_50_words %}
+                <tbody>
+                  <tr>
+
+                    <td>{{word}}</td>
+                    <td>{{count}}</td>
+                  </tr>
+                </tbody>
+                {% endfor %}
+
+              </table>
+            </div>
           </div>
         </div>
       </div>
