--- a/app/templates/add_task.html
+++ b/app/templates/add_task.html
@@ -14,10 +14,8 @@
 
 <body>
 
-
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/" style="font-weight: bold;">WC</a>
+    <a class="navbar-brand" href="/" style="font-weight: bold;">SWS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,25 +29,21 @@
             <li class="nav-item">
                 <a class="nav-link" href="/add-sent-task">SentScraper</a>
             </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="/all-results">All Results</a>
-            </li>
         </ul>
     </div>
 </nav>
-<hr>
+
 
 
   <div class="container">
     <div class="row">
       <div class="col">
-        <h5 class="mt-3">WordScraper</h5>
+        <h4 class="mt-3">WordScraper</h4>
         <div class="card mt-3">
           <div class="card-body">
             <form action="/add-task">
               <div class="form-group">
-                <label>Some Description</label>
+                <label>Scrapes texts of all p-tags from the supplied URL and then counts words. <strong style="color: blueviolet;">Have fun!</strong></label>
                 <input type="text" class="form-control" name="url" placeholder="Enter URL" required>
                 {% if message %}
                 <small id="emailHelp" class="form-text text-muted">{{ message }}</small>
@@ -86,7 +80,9 @@
       </div>
     </div>
   </div>
-
+  <div class="footer bg-primary">
+    <p> <strong>Masahiro Mark Fukui  | </strong> All features and codes are MIT License</p>
+</div>
 </body>
 
 </html>
