--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -15,8 +15,24 @@
 
 <body>
 
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/" style="font-weight: bold;">SWS</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/add-task">WordScraper</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/add-sent-task">SentScraper</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 
   <div class="container">
@@ -46,7 +62,7 @@
         </div>
 
 
-        <div class="card mt-3">
+        <div class="card mt-3" style="padding-bottom: 100px;">
           <div class="card-body">
             <h4>Result</h4>
             <hr>
@@ -79,30 +95,9 @@
     </div>
   </div>
 
-  <!-- <div class="container">
-    <div class="row">
-      <div class="col">
-        <h5 class="mt-3 mb-3">Job queue</h5>
-        {% if jobs %}
-        {% for job in jobs %}
-        <div class="card mb-3">
-          <div class="card-body">
-            <h6>{{ job.func_name }}</h6>
-            <p>Args: {{ job.args }}</p>
-            <small class="text-muted d-block">Job ID: {{ job.id }}</small>
-            <small class="text-muted d-block">Status: {{ job.status }}</small>
-            <small class="text-muted d-block">Created at: {{ job.created_at.strftime('%a, %d %b %Y %H:%M:%S') }}</small>
-            <small class="text-muted d-block">Enqueued at: {{ job.enqueued_at.strftime('%a, %d %b %Y %H:%M:%S') }}</small>
-          </div>
-        </div>
-        {% endfor %}
-        {% else %}
-        <p>No jobs in the queue</p>
-        {% endif %}
-      </div>
-    </div>
-  </div> -->
-
+<div class="footer-for-result bg-primary">
+    <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are MIT License</p>
+</div>
 </body>
 
 </html>
