--- a/app/templates/sent_result.html
+++ b/app/templates/sent_result.html
@@ -40,8 +40,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <!-- Average Score: Changes color depending on value -->
- 
+                
             
     <br>
     <div class="card mt-3">
@@ -127,15 +126,17 @@
             </div>
         </div>
     </div>
+            </div>
 
     <div class="footer-for-result bg-primary">
         <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are MIT License</p>
     </div>
+    </div>
+    </div>
 
 </body>
+
 <script>
-
-
     //----------------Pie Chart----------------//
     pieData = {
         datasets: [{
