--- a/app/templates/add_sent_task.html
+++ b/app/templates/add_sent_task.html
@@ -85,7 +85,7 @@
     </div>
   </div>
   <div class="footer bg-primary">
-    <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are MIT License</p>
+    <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License</p>
   </div>
   
 </body>
