--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,12 +51,12 @@
                             </ul> 
                         </p>
                         <hr>
-                        <a href="/add-task">Scrape Words</a>
+                        <span class="main-link"><a href="/add-task">Scrape Words</a></span>
                         <br>
                         <p>
                             Scrape texts of all p-tags from the supplied URL and then counts words.
                         </p>
-                        <a href="/add-sent-task">Scrape Sentences</a>
+                        <span class="main-link"><a href="/add-sent-task">Scrape Sentences</a></span>
                         <p>
                             Scrape texts of all p-tags from the supplied URL,</br>
                             analyzes the sentiment of each sentence and then visualizes the result.
@@ -84,7 +84,7 @@
         </div>
     </div>
     <div class="footer bg-primary">
-        <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are MIT License</p>
+        <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License</p>
     </div>
 </body>
 
