--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -2,16 +2,14 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel='stylesheet' href="static/style.css">
   <script src="/static/Chart.min.js"></script>
-  <title>Result</title>
+  <title>Word Counter Result</title>
 </head>
 
 <body>
@@ -22,13 +20,12 @@
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="/add-task">WordScraper</a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/add-sent-task">SentScraper</a>
         </li>
       </ul>
@@ -39,10 +36,10 @@
   <div class="container">
     <div class="row">
       <div class="col">
-
         <div class="card mt-3">
           <div class="card-body">
             <h4 class="mt-3">Word Counter Result</h4>
+            <hr>
             <div class="table">
               <table class="table table-striped table-bordered table-hover table-sm">
                 <thead class="thead-dark">
@@ -53,7 +50,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>{{ url }}</td>
+                    <td><a class="result" href="{{ url }}">{{ url }}</a></td>
                     <td>{{ time_stamp }}</td>
                   </tr>
                 </tbody>
@@ -61,17 +58,16 @@
             </div>
           </div>
         </div>
-
-
+        
         <div class="card mt-3" style="padding-bottom: 100px;">
           <div class="card-body">
-            <h4>Result</h4>
+            <h4>Result: Top 10 Words</h4>
             <hr>
             <div class="chart">
               <canvas id="top10"></canvas>
             </div>
-
-            <h5>Total Words: {{ len_top_50_words }}</h5>
+            <br><br>
+            <h4>Showing Top 50 Words</h4>
             <hr>
             <div class="table-wrapper-scroll-y my-custom-scrollbar">
               <table class="table table-bordered table-striped mb-0 table-sm">
@@ -90,7 +86,6 @@
                   </tr>
                 </tbody>
                 {% endfor %}
-
               </table>
             </div>
           </div>
@@ -100,7 +95,7 @@
   </div>
 
 <div class="footer-for-result bg-primary">
-    <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are MIT License</p>
+    <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License</p>
 </div>
 </body>
 <script>
@@ -126,15 +121,16 @@
   
   const top10BarChart = document.querySelector("#top10");
 
-  var chart = new Chart(top10BarChart, {
+  let chart = new Chart(top10BarChart, {
     type: 'bar',
 
     data: {
         labels: top10Words.map(tuple => tuple[0]),
         datasets: [{
             label: 'Count',
-            backgroundColor: 'purple',
-            borderColor: '#6B6B6B',
+            backgroundColor: "rgba(86, 16, 151, 0.6)",
+            borderColor: 'rgba(106, 103, 110, 1)',
+            borderWidth: 2,
             data: top10Words.map(tuple => tuple[1])
         }]
     },
