--- a/app/templates/sent_result.html
+++ b/app/templates/sent_result.html
@@ -40,9 +40,31 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                
-            
-    <br>
+    
+    <div class="card mt-3">
+        <div class="card-body">
+            <h4 class="mt-3">SentScraper Result</h4>
+            <hr>
+            <div class="table">
+            <table class="table table-striped table-bordered table-hover table-sm">
+                <thead class="thead-dark">
+                <tr>
+                    <th>Source URL</th>
+                    <th>Scraped at</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><a href="{{ url }}">{{ url }}</a></td>
+                    <td>{{ time_stamp }}</td>
+                </tr>
+                </tbody>
+            </table>
+            </div>
+        </div>
+        </div>
+    
+
     <div class="card mt-3">
         <div class="card-body">
             <h4>Positives VS Negatives</h4>
@@ -126,12 +148,48 @@
             </div>
         </div>
     </div>
-            </div>
 
+
+    <div class="card mt-3">
+        <div class="card-body">
+            <h4>All Sentences</h4>
+            <hr>
+            <div class="table-wrapper-scroll-y my-custom-scrollbar">
+            <table class="table table-bordered table-striped mb-0 table-sm">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Sentiment</th>
+                        <th>Compound Score</th>
+                    </tr>
+                </thead>
+                {% for sent, compound in top_100_sents %}
+                <tbody>
+                    {% if compound >= 0 %}
+                    <tr>
+                        <td>{{sent}}</td>
+                        <td class="table-success">{{compound}}</td>
+                    </tr>
+                    {% else %}
+                    <tr>
+                        <td>{{sent}}</td>
+                        <td class="table-danger">{{compound}}</td>
+                    </tr>
+                    {% endif %}
+                </tbody>
+                {% endfor %}
+            </table>
+        </div>
+
+        </div>
+    </div>
+    </div>
+
+    
+    </div>
+    </div>
+    <br>
     <div class="footer-for-result bg-primary">
-        <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are MIT License</p>
-    </div>
-    </div>
+        <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License</p>
     </div>
 
 </body>
@@ -145,9 +203,11 @@
                 {{ neg_length }}
             ],
             backgroundColor: [  
-            '#56AC4F',
-            '#B61626'
-        ]
+            'rgb(90, 214, 100, 0.6)',
+            'rgb(235, 92, 82, 0.6)'
+        ],
+        borderColor: '#6B6B6B',
+        borderWidth: 1
         }],
 
         labels: [
@@ -156,11 +216,10 @@
         ]
     };
 
-    var summaryPieChart = document.getElementById('summaryPie').getContext('2d');
-    var chart = new Chart(summaryPieChart, {
+    const summaryPieChart = document.getElementById('summaryPie').getContext('2d');
+    const chart0 = new Chart(summaryPieChart, {
         type: "pie",
         data: pieData,
-        borderColor: '#6B6B6B',
         options: []
 
     });
@@ -181,9 +240,9 @@
     
     for(const compound of top_10_compounds) {
         if(compound > 0) {
-            top_10_colors.push('#56AC4F')
+            top_10_colors.push('rgb(90, 214, 100, 0.6)')
         } else {
-            top_10_colors.push('#B61626')
+            top_10_colors.push('rgb(235, 92, 82, 0.6)')
         }
     }
 
@@ -198,16 +257,15 @@
 
     for(const compound of worst_10_compounds) {
         if(compound > 0) {
-            worst_10_colors.push('#56AC4F')
+            worst_10_colors.push('rgb(90, 214, 100, 0.6)')
         } else {
-            worst_10_colors.push('#B61626')
+            worst_10_colors.push('rgb(235, 92, 82, 0.6)')
         }
     }
 
 
-    // Options for Bar Charts
-    var options = {
-    // All of my other bar chart option here
+ 
+    const options = {
     scales: {
             yAxes: [{
                 ticks: {
@@ -217,8 +275,8 @@
         }
     };
 
-    var positiveChart = document.getElementById('posChart').getContext('2d');
-    var chart = new Chart(positiveChart, {
+    const positiveChart = document.getElementById('posChart').getContext('2d');
+    let chart1 = new Chart(positiveChart, {
     type: 'bar',
 
     data: {
@@ -231,6 +289,7 @@
             label: 'Sentiment Score',
             backgroundColor: top_10_colors,
             borderColor: '#6B6B6B',
+            borderWidth: 1,
             data: [
             {% for sent, compound in top_10_sents %}
             {{ compound }},
@@ -243,12 +302,10 @@
     });
 
 
-    var negativeChart = document.getElementById('negChart').getContext('2d');
-    var chart = new Chart(negativeChart, {
-    // The type of chart we want to create
+    const negativeChart = document.getElementById('negChart').getContext('2d');
+    let chart2 = new Chart(negativeChart, {
     type: 'bar',
 
-    // The data for our dataset
     data: {
         labels: [
             {% for sent, compound in worst_10_sents %}
@@ -258,7 +315,8 @@
         datasets: [{
             label: 'Sentiment Score',
             backgroundColor: worst_10_colors,
-            borderColor: '6B6B6B',
+            borderColor: '#6B6B6B',
+            borderWidth: 1,
             data: [
             {% for sent, compound in worst_10_sents %}
             {{ compound }},
