--- a/app/static/style.css
+++ b/app/static/style.css
@@ -11,6 +11,28 @@ h4 {
     font-weight: bold;
 }
 
+img.logo{
+    width: 60px; 
+    height: 25px;
+    /* max-width: 80px;
+    max-height: 50px;  */
+}
+
+img.logo-large {
+    display: block;
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+img.mylink {
+    width: auto;
+    height: auto;
+    height: 100px;
+}
+
 a {
     color: rgb(112, 0, 241);
     font-size: large;
