Refactor python code: flake8

--- a/app/templates/sent_result.html
+++ b/app/templates/sent_result.html
@@ -162,7 +162,7 @@
                         <th>Compound Score</th>
                     </tr>
                 </thead>
-                {% for sent, compound in top_100_sents %}
+                {% for sent, compound in scraped_sents %}
                 <tbody>
                     {% if compound >= 0 %}
                     <tr>
