--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -61,13 +61,13 @@
         
         <div class="card mt-3" style="padding-bottom: 100px;">
           <div class="card-body">
-            <h4>Result: Top 10 Words</h4>
+            <h4>Result: Top 10 Scraped Words</h4>
             <hr>
             <div class="chart">
               <canvas id="top10"></canvas>
             </div>
             <br><br>
-            <h4>Showing Top 50 Words</h4>
+            <h4>Showing Scraped Words</h4>
             <hr>
             <div class="table-wrapper-scroll-y my-custom-scrollbar">
               <table class="table table-bordered table-striped mb-0 table-sm">
@@ -77,7 +77,7 @@
                     <th>count</th>
                   </tr>
                 </thead>
-                {% for word, count in top_50_words %}
+                {% for word, count in scraped_words %}
                 <tbody>
                   <tr>
 
@@ -112,7 +112,7 @@
       };
 
   const top10Words = [
-    {% for word, count in top_50_words[:10] %}
+    {% for word, count in scraped_words[:10] %}
     ["{{ word }}", {{ count }}],
     {% endfor %}
   ];
