--- a/app/static/style.css
+++ b/app/static/style.css
@@ -31,6 +31,14 @@ img.mylink {
     padding-right: 20px;
 }
 
+img.wordcloud {
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    border-radius: 15px;
+}
+
 a {
     color: rgb(112, 0, 241);
     font-size: large;
