--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -33,6 +33,8 @@
   </nav>
 
 
+  
+
   <div class="container">
     <div class="row">
       <div class="col">
@@ -58,6 +60,15 @@
             </div>
           </div>
         </div>
+
+
+        <div class="card mt-3">
+            <div class="card-body">
+              <h4 class="mt-3">WordCloud</h4>
+              <hr>
+                <image class="wordcloud" src="static/images/wordcloud_images/{{ image_name }}.png"></image>
+            </div>
+          </div>
         
         <div class="card mt-3" style="padding-bottom: 100px;">
           <div class="card-body">
