Add Logger / Refactor for Deployment

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,11 +45,11 @@
                         <img class="logo-large" src="static/images/logo.png">
 
                         <p style="text-align: center;">
-                            Hello, this project was created as one of my personal fun projects.</br>
-                            The following tools / technologies are used:
-                        <ul>
+                            Hello visitor, this project was created as one of my personal fun projects.</br>
+                        <ul style="padding-top: 20px;">
+                            <p>Made Posiible By:</p>
                             <li style="align-items: center;"><strong>Python Flask</strong>: Backend Server</li>
-                            <li><strong>Python Beautiful Soup</strong>: Webscraper</li>
+                            <li><strong>Python Beautiful Soup</strong>: Webscraping</li>
                             <li><strong>Chart.js</strong>: Data Visualization</li>
                             <li><strong>Redis</strong>: Task Queue & Cache Database</li>
 
@@ -100,7 +100,7 @@
 
                             <div class=".col-6 .col-sm-3">
                                 <a class="bottom-link"
-                                    href="https://www.linkedin.com/in/masahiro-mark-fukui-78388ab1">Linkedin Profile</a>
+                                    href="https://www.linkedin.com/in/masahiro-mark-fukui-78388ab1"> My Linkedin Profile</a>
                             </div>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
         </div>
     </div>
     <div class="footer bg-primary">
-        <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License</p>
+        <p> <strong>© 2020 Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License<br>Logo Design by: Yoshimitsu Tomita</p>
     </div>
 </body>
 
