--- a/app/templates/add_sent_task.html
+++ b/app/templates/add_sent_task.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
-  <title>Sentiment Analysis</title>
+  <title>SWS - SentScraper</title>
 </head>
 
 <body>
@@ -59,33 +59,8 @@
       </div>
     </div>
   </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <h5 class="mt-3 mb-3">Job queue</h5>
-        {% if jobs %}
-        {% for job in jobs %}
-        <div class="card mb-3">
-          <div class="card-body">
-            <h6>{{ job.func_name }}</h6>
-            <p>Args: {{ job.args }}</p>
-            <small class="text-muted d-block">Job ID: {{ job.id }}</small>
-            <small class="text-muted d-block">Status: {{ job.status }}</small>
-            <small class="text-muted d-block">Created at: {{ job.created_at.strftime('%a, %d %b %Y %H:%M:%S') }}</small>
-            <small class="text-muted d-block">Enqueued at:
-              {{ job.enqueued_at.strftime('%a, %d %b %Y %H:%M:%S') }}</small>
-          </div>
-        </div>
-        {% endfor %}
-        {% else %}
-        <p>No jobs in the queue</p>
-        {% endif %}
-      </div>
-    </div>
-  </div>
   <div class="footer bg-primary">
-    <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License</p>
+    <p> <strong>© 2020 Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License</p>
   </div>
   
 </body>
