--- a/app/templates/add_task.html
+++ b/app/templates/add_task.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
-  <title>Web-scraper Job Queue</title>
+  <title>SWS - WordScraper</title>
 </head>
 
 <body>
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col">
         <h5 class="mt-3 mb-3">Job queue</h5>
@@ -79,9 +79,9 @@
         {% endif %}
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="footer bg-primary">
-    <p> <strong>Masahiro Mark Fukui  | </strong> All features and codes are licensed under MIT License</p>
+    <p> <strong>© 2020 Masahiro Mark Fukui  | </strong> All features and codes are licensed under MIT License</p>
 </div>
 </body>
 
