--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -105,7 +105,7 @@
   </div>
 
 <div class="footer-for-result bg-primary">
-    <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License</p>
+    <p> <strong>© 2020 Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License</p>
 </div>
 </body>
 <script src="/static/Chart.min.js"></script>
