--- a/app/templates/sent_result.html
+++ b/app/templates/sent_result.html
@@ -188,7 +188,7 @@
     </div>
     <br>
     <div class="footer-for-result bg-primary">
-        <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License</p>
+        <p> <strong>© 2020 Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License</p>
     </div>
 
 </body>
