--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -31,9 +31,6 @@
     </div>
   </nav>
 
-
-  
-
   <div class="container">
     <div class="row">
       <div class="col">
@@ -65,7 +62,11 @@
             <div class="card-body">
               <h4 class="mt-3">WordCloud</h4>
               <hr>
-                <image class="wordcloud" src="static/images/wordcloud_images/{{ image_name }}.png"></image>
+              {% if image_name == "no_image"%}
+                <p>NO WORDCLOUD AVAILABLE</p>
+              {% else %}
+              <image class="wordcloud" src="static/images/wordcloud_images/{{ image_name }}.png"></image>
+              {% endif %}
             </div>
           </div>
         
