--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,10 +48,11 @@
                             Hello visitor, this project was created as one of my personal fun projects.</br>
                         <ul style="padding-top: 20px;">
                             <p>Made Posiible By:</p>
-                            <li style="align-items: center;"><strong>Python Flask</strong>: Backend Server</li>
+                            <li style="align-items: center;"><strong>Python Flask & gnicorn</strong>: Backend Server</li>
                             <li><strong>Python Beautiful Soup</strong>: Webscraping</li>
                             <li><strong>Chart.js</strong>: Data Visualization</li>
                             <li><strong>Redis</strong>: Task Queue & Cache Database</li>
+                            <li><strong>Docker & docker-compose</strong>: Deployment</li>
 
                         </ul>
                         </p>
@@ -108,9 +109,11 @@
             </div>
         </div>
     </div>
-    <div class="footer bg-primary">
-        <p> <strong>© 2020 Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License<br>Logo Design by: Yoshimitsu Tomita</p>
-    </div>
+    <footer class="footer bg-primary" style="position: static;">
+        <div class="container">
+            <p> <strong>© 2020 Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License<br>Logo Design by: Yoshimitsu Tomita</p>
+        </div>
+    </footer>
 </body>
 
 </html>
