--- a/app/templates/add_task.html
+++ b/app/templates/add_task.html
@@ -57,32 +57,11 @@
     </div>
   </div>
 
-  <!-- <div class="container">
-    <div class="row">
-      <div class="col">
-        <h5 class="mt-3 mb-3">Job queue</h5>
-        {% if jobs %}
-        {% for job in jobs %}
-        <div class="card mb-3">
-          <div class="card-body">
-            <h6>{{ job.func_name }}</h6>
-            <p>Args: {{ job.args }}</p>
-            <small class="text-muted d-block">Job ID: {{ job.id }}</small>
-            <small class="text-muted d-block">Status: {{ job.status }}</small>
-            <small class="text-muted d-block">Created at: {{ job.created_at.strftime('%a, %d %b %Y %H:%M:%S') }}</small>
-            <small class="text-muted d-block">Enqueued at: {{ job.enqueued_at.strftime('%a, %d %b %Y %H:%M:%S') }}</small>
-          </div>
-        </div>
-        {% endfor %}
-        {% else %}
-        <p>No jobs in the queue</p>
-        {% endif %}
-      </div>
+  <footer class="footer bg-primary">
+    <div class="container">
+        <p> <strong>© 2020 Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License<br>Logo Design by: Yoshimitsu Tomita</p>
     </div>
-  </div> -->
-  <div class="footer bg-primary">
-    <p> <strong>© 2020 Masahiro Mark Fukui  | </strong> All features and codes are licensed under MIT License</p>
-</div>
+</footer>
 </body>
 
 </html>
