--- a/app/templates/no_results.html
+++ b/app/templates/no_results.html
@@ -58,9 +58,11 @@
             </div>
         </div>
     </div>
-    <div class="footer bg-primary">
-        <p> <strong>© 2020 Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License<br>Logo Design by: Yoshimitsu Tomita</p>
-    </div>
+    <footer class="footer bg-primary">
+        <div class="container">
+            <p> <strong>© 2020 Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License<br>Logo Design by: Yoshimitsu Tomita</p>
+        </div>
+    </footer>
 </body>
 
 </html>
