Add Error handling

--- a/app/templates/sent_result.html
+++ b/app/templates/sent_result.html
@@ -187,9 +187,11 @@
     </div>
     </div>
     <br>
-    <div class="footer-for-result bg-primary">
-        <p> <strong>Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License</p>
-    </div>
+    <footer class="footer bg-primary" style="position: static;">
+        <div class="container">
+            <p> <strong>© 2020 Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License<br>Logo Design by: Yoshimitsu Tomita</p>
+        </div>
+    </footer>
 
 </body>
 <script src="/static/Chart.min.js"></script>
