--- a/app/templates/add_task.html
+++ b/app/templates/add_task.html
@@ -80,9 +80,11 @@
       </div>
     </div>
   </div>
-  <div class="footer bg-primary">
-    <p> <strong>Masahiro Mark Fukui  | </strong> All features and codes are licensed under MIT License</p>
-</div>
+  <footer class="footer bg-primary">
+    <div class="container">
+        <p> <strong>© 2020 Masahiro Mark Fukui | </strong> All features and codes are licensed under MIT License<br>Logo Design by: Yoshimitsu Tomita</p>
+    </div>
+  </footer>
 </body>
 
 </html>
