--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,12 +46,13 @@
 
                         <p style="text-align: center;">
                             Hello, this project was created as one of my personal fun projects.</br>
-                            The following tools / technologies are used:
+                            The project was made possible by:
                         <ul>
-                            <li style="align-items: center;"><strong>Python Flask</strong>: Backend Server</li>
-                            <li><strong>Python Beautiful Soup</strong>: Webscraper</li>
+                            <li style="align-items: center;"><strong>Python Flask & gnicorn</strong>: Backend Server</li>
+                            <li><strong>Python Beautiful Soup</strong>: Webscraping</li>
                             <li><strong>Chart.js</strong>: Data Visualization</li>
                             <li><strong>Redis</strong>: Task Queue & Cache Database</li>
+                            <li><strong>Docker & docker-compose</strong>: Deployment</li>
 
                         </ul>
                         </p>
