--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -60,11 +60,11 @@
                         <span class="main-link"><a href="/add-task">Scrape Words</a></span>
                         <br>
                         <p>
-                            Scrape texts of all p-tags from the supplied URL and then counts words.
+                            Scrapes texts from the supplied URL and then counts words, visualizes the data,<br> and then generates a wordcloud image
                         </p>
                         <span class="main-link"><a href="/add-sent-task">Scrape Sentences</a></span>
                         <p>
-                            Scrape texts of all p-tags from the supplied URL,</br>
+                            Scrapes texts from the supplied URL,</br>
                             analyzes the sentiment of each sentence and then visualizes the result.
                         </p>
                     </div>
